2008-11-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs: Improve
	Revert[to]revision feature, adding commit messages.

2008-11-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs: Coding guidelines.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* VersionControl.addin.xml: Bump MD version.

2008-11-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs: Don't crash when
	updating the status of deleted files (there isn't a VersionInfo for
	them after comitting). Fixes bug #437988 - NREs in version control
	addin after commit.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl/Repository.cs:
	* MonoDevelop.VersionControl/VersionControlFileSystemExtension.cs: Use
	CanMoveFiles to check if a directory can be moved from one SVN dir to
	another SVN dir. Fixes bug #436289.

2008-10-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* VersionControl.addin.xml:
	* MonoDevelop.VersionControl.mdp:
	* MonoDevelop.VersionControl/Repository.cs:
	* MonoDevelop.VersionControl/LockCommand.cs:
	* MonoDevelop.VersionControl/CommitCommand.cs:
	* MonoDevelop.VersionControl/RevertCommand.cs:
	* MonoDevelop.VersionControl/UnlockCommand.cs:
	* MonoDevelop.VersionControl.Views/LogView.cs:
	* MonoDevelop.VersionControl/UpdateCommand.cs:
	* MonoDevelop.VersionControl.Views/DiffView.cs:
	* MonoDevelop.VersionControl.Views/StatusView.cs:
	* MonoDevelop.VersionControl/UnknownRepository.cs:
	* MonoDevelop.VersionControl/VersionControlItem.cs:
	* MonoDevelop.VersionControl/AddRemoveMoveCommand.cs:
	* MonoDevelop.VersionControl/VersionControlItemList.cs:
	* MonoDevelop.VersionControl/VersionControlNodeExtension.cs:
	* MonoDevelop.VersionControl/VersionControlCommandHandler.cs: Improved
	support for multiple selection in the project pad. Added new
	extension point for the status view context menu.
